fix more unreads overlapping

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -1356,7 +1356,7 @@ label.required:after {
 	}
 	.unread-rooms {
 		position: absolute;
-		z-index: 1000;
+		z-index: 1;
 		width: 100%;
 		text-align: center;
 		line-height: 24px;
